opam-version: "1.2"
maintainer: "Frederic Bour <frederic.bour@lakaban.net>"
authors: "Frederic Bour <frederic.bour@lakaban.net>"
homepage: "https://github.com/let-def/merlin-extend"
bug-reports: "https://github.com/let-def/merlin-extend"
license: "MIT"
dev-repo: "https://github.com/let-def/merlin-extend.git"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
available: [ocaml-version >= "4.02.3"]
depends: [
  "jbuilder" {build}
  "cppo" {build}
]
